Update and rename jeemains.htm to jeemain.htm

--- a/js/Countdowns/jeemain.htm
+++ b/js/Countdowns/jeemain.htm
@@ -73,7 +73,7 @@ body {
 </style>
 </head>
 <body>
-    <div class="time-left">TIME LEFT for JEE Mains 2022</div>
+    <div class="time-left">TIME LEFT for JEE Main 2022</div>
     <br> <br>
     <div id="timer">
         Session 1
